--- a/style.css
+++ b/style.css
@@ -284,9 +284,47 @@ color: #000000;
 .view p{
     padding-right: 10px;
 }
+/* for showcase */
+.show{
+    width:80%;
+    margin: auto;
+}
+.market{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.showImage{
+   width: 50%;
+   text-align: center;
+}
+.showWords{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: left;
+}
+.showWords p{
+    text-align: justify;
+    padding: 30px;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 200%;
+    font-size: 20px;
+ }
+ .showWords button{
+    margin-bottom: 30px;
+    margin-left: 30px;
+ }
+
+
+.showcase{
+    display: flex;
+}
 @media screen and (max-width:768px) {
     header{
-        width: 100%;
+        width: 80%;
         justify-content: space-around;
         margin-bottom: 20px;
         padding-top: 20px;
@@ -339,7 +377,7 @@ color: #000000;
     .all a{
         text-align: center;
         display: contents;
-        border: 1px solid black;
+        /* border: 1px solid black; */
         text-decoration: none;
         font-size: 20px;
         padding: 30px;
@@ -359,6 +397,31 @@ color: #000000;
     }
     .cartgoods{
         margin-bottom: 30px;
+    }
+    .show{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .showcase{
+        flex-direction: column;
+    }
+    .showImage{
+        width: 80%;
+        text-align: center;
+    }
+    .showImage img{
+        width: 300px;
+    }
+    .showWords{
+        align-items: center;
+        width: 80%;
+        font-weight: 300;
+        line-height: 100px;
+    }
+    .market{
+        text-align: center;
     }
 }
 @media screen and (max-width:443px) {
