--- a/style.css
+++ b/style.css
@@ -352,8 +352,6 @@ color: #000000;
     .hero{
         width: 80%;
         flex-direction: column;
-        /* margin-top: 140px; */
-        border: 1px solid red;
     }
     .article h1{
         font-size: 45px;
@@ -380,12 +378,10 @@ color: #000000;
         text-align: center;
     }
     .img{
-        width: 350px;
-        text-align: center;
+        width: 300px;
     }
     .products{
         width: 80%;
-        border: 1px solid blue;
     }
 
     .products nav{
@@ -407,7 +403,6 @@ color: #000000;
         cursor: pointer;
     }
     .cartItems{
-        border: 1px solid green;
         justify-content: center;
         align-items: center;
     }
@@ -416,7 +411,6 @@ color: #000000;
         justify-content: center;
         align-items: center;
         width: 80%;
-        /* margin-left: 35px; */
     }
     .cartgoods{
         margin-bottom: 30px;
@@ -430,7 +424,6 @@ color: #000000;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        border: 1px solid brown;
         width: 80%;
     }
     .showcase{
@@ -447,17 +440,20 @@ color: #000000;
         width: 250px;
     }
     .showWords{
-        align-items: center;
         width: 80%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     .showWords p{
-        text-align: center;
+        text-align: justify;
         padding-top: 10px;
         font-family: 'Noto Sans';
         font-style: normal;
         font-weight: 400;
         line-height: 120%;
         font-size: 20px;
+        width: 100%;
      }
     .market{
         text-align: center;
