--- a/sign.css
+++ b/sign.css
@@ -140,26 +140,29 @@ span{
         text-align: center;
     }
     .container{
-        width: 100%;
+        width: 80%;
         flex-direction: column;
         align-items: center;
         margin: auto;
         margin-top: 0;
     }
     .item1{
+        width: 100%;
         padding-left: 0;
+        justify-content: center;
+        align-items: center;
     }
     .item2{
         display: none;
     }
     form{
-        width: 300px;
+        width: 280px;
     }
      form input{
-        width: 280px;
+        width: 260px;
      }
      .submit, button{
-        width: 300px;
+        width: 280px;
      }
      
 }
