--- a/signup.css
+++ b/signup.css
@@ -55,32 +55,7 @@ form input{
     padding-left: 15px;
     font-size: 16px;
 }
-#email{
-    margin-bottom: 20px;
-}
-.under{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 0;
-    margin-bottom: 30px;
-}
-.under2{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;    
-}
-.under p{
-    font-family: 'Rufina';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 15px;
-    color: #1E510C;    
-}
-.forget{
-    text-decoration: underline 1px solid #1E510C;;
-}
+
 .submit{
     background: #034B06;
     border: 1px solid #034B06;
@@ -105,7 +80,7 @@ button{
     border: 1px solid black;
     background-color: white;
 }
-.button h5{
+button p{
     font-family: 'Rufina';
     font-style: normal;
     font-weight: 400;
@@ -113,6 +88,10 @@ button{
     line-height: 20px;
     color: #000000;
     padding-left: 20px;
+}
+.google{
+    width: 20px;
+    height: 20px;
 }
 .center{
     text-align: center;
@@ -181,9 +160,13 @@ span{
     button{
         text-align: center;
     }
+    .submit{
+        margin-top: 15px;
+    }
     .break{
         flex-direction: column;
-        margin-bottom: 20px;
+        margin-bottom: 0px;
+        margin-top: 0px;
      }
      .break input{
         width: 240px;
