--- a/sign.css
+++ b/sign.css
@@ -54,6 +54,7 @@ form input{
     color: black;
     padding-left: 15px;
     font-size: 16px;
+    outline: none;
 }
 #email{
     margin-bottom: 20px;
@@ -172,7 +173,8 @@ span{
     }
      form input{
         width: 260px;
-        padding-left: 0;
+        padding-left: 15px;
+        outline: none;
      }
      .submit, button{
         width: 260px;
