worked on signup form width

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ button{
 /* for hero section */
 .hero{
    
-    min-width: 80%;
+    width: 80%;
     margin: auto;
     margin-top: 130px;
     display: flex;
@@ -179,8 +179,8 @@ button{
 
 /* for cartItems */
 .cartItems{
-    /* width: 80%; */
-    /* margin: auto; */
+    width: 80%;
+    margin: auto;
     margin-bottom: 80px;
     display: flex;
     flex-direction: column;
@@ -747,6 +747,6 @@ color: #000000;
 }
 @media screen and (max-width:443px) {
     .article h1{
-        font-size: 35px;
+        font-size: 30px;
     }
 }
